<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NewTaskSheet">


    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/new_task"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        style="@style/TextAppearance.AppCompat.Title"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/timePickerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#E57C23"
        android:textColor="?colorOnPrimary"
        android:layout_marginHorizontal="20dp"
        android:text="@string/select_time"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:backgroundTint="#025464"
            android:textColor="?colorOnPrimary"
            android:text="@string/delete"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:backgroundTint="#025464"
            android:textColor="?colorOnPrimary"
            android:text="@string/save" />
    </LinearLayout>


</LinearLayout>